--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 					</div>
 				</div>
 				<div class="tp-info">
-					<a href="javascript:;">登录</a>
+					<a href="login.html">登录</a>
 					<span>|</span>
-					<a href="javascript:;">注册</a>
+					<a href="register.html">注册</a>
 					<span>|</span>
 					<a href="javascript:;">消息</a>
 					<span>|</span>
