--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
 					<a href="javascript:;">消息</a>
 					<span>|</span>
 				</div>
+				<div class="user-info">
+					<h3 class="user-name">123456 <i class="iconfont icon-youbian-copy"></i> </h3>
+					<ul class="info-list">
+						<li class="info-item"><a href="">个人中心</a></li>
+						<li class="info-item"><a href="">评价晒单</a></li>
+						<li class="info-item"><a href="">我的喜欢</a></li>
+						<li class="info-item"><a href="">小米账户</a></li>
+						<li class="info-item"><a href="">退出登录</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<div class="head">
