--- a/login.html
+++ b/login.html
@@ -14,9 +14,12 @@
 				<form action="" id="login">
 					<div class="wrap wrap-user">
 						<input type="text" class="user" placeholder="邮箱/手机号码/小米账号"/>
+						<span class="erro"></span>
 					</div>
+
 					<div class="wrap wrap-pass">
 						<input type="text" class="passport" placeholder="密码"/>
+						<span class="erro"></span>
 					</div>
 					<div class="wrap wrap-btn">
 						<input type="button" class="btn"  value=""/>
@@ -54,7 +57,9 @@
 			</p>
 		</div>
 		<script src="js/jquery.1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/jquery.cookie.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/login.js" type="text/javascript" charset="utf-8"></script>
+		<script src="php/username.php" type="text/javascript" charset="utf-8"></script>
 	</body>
 	
 </html>
