--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
 		<div class="head">
 			<div class="container">
 				<div class="hd-left">
-					<a href="javascript:;" class="logo">
+					<a href="index.html" class="logo">
 						<img src="img/logo.png" alt="" />
 					</a>
 					<span class="welcom">欢 迎 注 册</span>
